tests/ui-tests/tests/cases/missing-variable.stderr
error[E0599]: no function or associated item named `missing_var` found for struct `VariablesFields` in the current scope
  --> tests/cases/missing-variable.rs:20:26
   |
11 |       pub struct Variables {
   |       -------------------- function or associated item `missing_var` not found for this struct
...
18 |       #[cynic(graphql_type = "Root", variables = "Variables")]
   |  ________________________________________________-
19 | |     pub struct AllFilms {
20 | |         #[arguments(id: $missing_var)]
   | |                         -^^^^^^^^^^^ function or associated item not found in `VariablesFields`
   | |_________________________|
   |
